--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.eveoh</groupId>
     <artifactId>jtds</artifactId>
-    <version>1.3.2-SNAPSHOT</version>
+    <version>1.3.2</version>
     <packaging>jar</packaging>
     <name>jTDS</name>
 
@@ -39,6 +39,7 @@
         <url>https://github.com/eveoh/jtds</url>
         <connection>scm:git:git://github.com/eveoh/jtds.git</connection>
         <developerConnection>scm:git:git@github.com:eveoh/jtds.git</developerConnection>
+    <tag>v1.3.2</tag>
   </scm>
 
     <developers>
