--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.eveoh</groupId>
     <artifactId>jtds</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>1.3.3</version>
     <packaging>jar</packaging>
     <name>jTDS</name>
 
@@ -39,7 +39,7 @@
         <url>https://github.com/eveoh/jtds</url>
         <connection>scm:git:git://github.com/eveoh/jtds.git</connection>
         <developerConnection>scm:git:git@github.com:eveoh/jtds.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v1.3.3</tag>
   </scm>
 
     <developers>
